--- a/To-dO/style.css
+++ b/To-dO/style.css
@@ -1,48 +1,10 @@
-
-
-#main{
-    border: 2px solid white;
-    border-radius: 5px;
-    width: 300px;
-    padding: 10px;
-    background-color: #baceea;
-}
-
 body{
-    padding-top: 80px;
+    background-color: #020817;
+    padding: 20% 30% 20% 30%;
     display: flex;
     justify-content: center;
-    background-color: #4269ca;
-    
 }
 
-
-#adder{
-    height: 20px;
-}
-
-#inputBox{
-    background-color: white;
-    width: 70%;
-    border-radius: 10px;
-    height: 100%;
-}
-#NewTaskbutton{
-    background-color: #1D4ED8;
-    width: 25%;
-    height: 130%;
-    border-radius: 10px;
-    color: white;
-
-}
-
-#Taskboard{
-    margin-top: 20px;
-    background-color: #bbc4ff;
-    height: 250px;
-    padding: 5px;
-}
-#Taskboard div{
-    background-color: white;
-    padding: 5px;
+#main{
+    background-color: bisque;
 }
